--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--opengraph-->
     <meta property="og:type" content="website">
     <meta property="og:title" content="정아한방병원">
-    <meta property="og:url" content="yeori218.dothome.co.kr/">
+    <meta property="og:url" content="yeori218.github.io/jungah/">
     <meta property="og:image" content="images/common/og_img.jpg">
     <meta property="og:description" content="바르고 곧은 마음의 병원, 힐링의 공간 정아한방병원">
     <!--//opengraph-->
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <div id="wrap">
     <!-- 헤더 시작 -->
     <header id="header">
         <div class="header_inner">
@@ -347,6 +348,7 @@
         </div>
 
     </footer>
+</div>
     <!-- 푸터 종료 -->
 
 <script>$(window).fadeThis({reverse:false});</script>
