--- a/sub/introduction.html
+++ b/sub/introduction.html
@@ -9,7 +9,7 @@
     <!--opengraph-->
     <meta property="og:type" content="website">
     <meta property="og:title" content="정아한방병원">
-    <meta property="og:url" content="yeori218.dothome.co.kr/">
+    <meta property="og:url" content="yeori218.github.io/jungah">
     <meta property="og:image" content="../images/common/og_img.jpg">
     <meta property="og:description" content="바르고 곧은 마음의 병원, 힐링의 공간 정아한방병원">
     <!--//opengraph-->
